--- a/Renta/static/css/start.css
+++ b/Renta/static/css/start.css
@@ -1,58 +1,41 @@
-.rating {
-  background: #fff;
-}
 
-input[type="radio"] {
-  position: fixed;
-  top: 0;
-  right: 100%;
-}
 
-label {
-  font-size: 1.5em;
-  padding: 0.5em;
-  margin: 0;
-  float: left;
+.star-container {
+  text-align: center;
+  font-size: 0;
+}
+.star-container label {
+  display: inline-block;
   cursor: pointer;
-  -moz-transition: 0.2s;
-  -o-transition: 0.2s;
-  -webkit-transition: 0.2s;
-  transition: 0.2s;
 }
-
-input[type="radio"]:checked ~ input + label {
-  background: none;
-  color: #aaa;
+.star-container label:after {
+  content: "★";
+  font-size: 46px;
+  color: #999;
+  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);
 }
-
-input + label {
-  background: #fff;
-  color: orange;
-  margin: 0 0 1em 0;
+.star-container label:hover:after {
+  color: #F89406;
 }
-
-input + label:first-of-type {
-  border-top-left-radius: 8px;
-  border-bottom-left-radius: 8px;
+.star-container input {
+  display: none;
 }
-
-input:checked + label {
-  border-top-right-radius: 8px;
-  border-bottom-right-radius: 8px;
+.star-container #one:checked ~ label[for=one]:after,
+.star-container #two:checked ~ label[for=two]:after,
+.star-container #three:checked ~ label[for=three]:after,
+.star-container #four:checked ~ label[for=four]:after,
+.star-container #five:checked ~ label[for=five]:after {
+  color: #F89406;
 }
-
-hr {
-  clear: both;
-  border: 0;
-  border-top: 2px solid #999;
-  margin: 2em 0;
+.star-container #two:checked ~ label[for=one]:after {
+  color: #F89406;
 }
-
-/* ----- DEMO STUFF ----- */
-body {
-  padding: 5% 10%;
-  line-height: 1.4;
-  background: #888;
-  color: #fff;
-  font-family: sans-serif;
+.star-container #three:checked ~ label[for=one]:after, .star-container #three:checked ~ label[for=two]:after {
+  color: #F89406;
+}
+.star-container #four:checked ~ label[for=one]:after, .star-container #four:checked ~ label[for=two]:after, .star-container #four:checked ~ label[for=three]:after {
+  color: #F89406;
+}
+.star-container #five:checked ~ label[for=one]:after, .star-container #five:checked ~ label[for=two]:after, .star-container #five:checked ~ label[for=three]:after, .star-container #five:checked ~ label[for=four]:after {
+  color: #F89406;
 }
