--- a/Renta/templates/panel/renta-auto.html
+++ b/Renta/templates/panel/renta-auto.html
@@ -4,13 +4,12 @@
 
 
 {% block dash %}
-
-{{form.as_p}}
-
-
+{{auto}}
 <div class="container-fluid">
 
 <div class="row">
+  
+  
     <div class="col-md-4 order-md-2 mb-4">
         <h4 class="d-flex justify-content-between align-items-center mb-3">
             <span class="text-muted">Producto</span>
@@ -20,9 +19,9 @@
             <li class="list-group-item d-flex justify-content-between lh-condensed">
                 <div>
                     <h6 class="my-0">Nombre de producto</h6>
-                    <small class="text-muted">Descripcion</small>
+                    <small class="text-muted">Ford Fiesta{{forms.producto.nombres}}</small>
                 </div>
-                <span class="text-muted">$12</span>
+                <span class="text-muted">$2500</span>
             </li>
            
            
@@ -31,11 +30,11 @@
                     <h6 class="my-0">Promocion</h6>
                     <small></small>
                 </div>
-                <span class="text-success">-$5</span>
+                <span class="text-success">$</span>
             </li>
             <li class="list-group-item d-flex justify-content-between">
                 <span>Total: </span>
-                <strong>$20</strong>
+                <strong>$2500</strong>
             </li>
         </ul>
         <form class="card p-2">
@@ -47,105 +46,68 @@
             </div>
         </form>
     </div>
+    
+
     <div class="col-md-8 order-md-1">
         <h4 class="mb-3">Datos de renta</h4>
-        <form class="needs-validation" novalidate="">
+
+        <form class="needs-validation" novalidate="" method="POST">{% csrf_token %}
             <div class="row">
                 <div class="col-md-6 mb-3">
                     <label for="firstName">Nombres</label>
-                    <input type="text" class="form-control" id="firstName" placeholder="" value="" required="">
+                    {{form.nombres}}
                     <div class="invalid-feedback"> Valid first name is required. </div>
                 </div>
                 <div class="col-md-6 mb-3">
                     <label for="lastName">Apellidos</label>
-                    <input type="text" class="form-control" id="lastName" placeholder="" value="" required="">
+                    {{form.apellido}}
                     <div class="invalid-feedback"> Valid last name is required. </div>
                 </div>
             </div>
-            <div class="mb-3">
-                <label for="username">Usuario</label>
-                <div class="input-group">
-                    <div class="input-group-prepend">
-                        <span class="input-group-text">@</span>
-                    </div>
-                    <input type="text" class="form-control" id="username"  required="">
-                    <div class="invalid-feedback" style="width: 100%;"> Your username is required. </div>
-                </div>
-            </div>
+            
             <div class="mb-3">
                 <label for="email">Correo <span class="text-muted"></span></label>
-                <input type="email" class="form-control" id="email" placeholder="tu@ejemplo.com">
+                {{form.email}}
                 <div class="invalid-feedback"> Please enter a valid email address for shipping updates. </div>
             </div>
+
+            <div class="mb-3">
+                <label for="firstName">Auto</label>
+                {{form.producto}}
+                <div class="invalid-feedback"> Valid first name is required. </div>
+            </div>
+            
             <div class="mb-3">
                 <label for="address">Direccion</label>
-                <input type="text" class="form-control" id="address" required="">
+                {{form.direccion}}
                 <div class="invalid-feedback"> Please enter your shipping address. </div>
             </div>
             
             <div class="row">
                 <div class="col-md-5 mb-3">
                     <label for="country">Ciudad</label>
-                    <input type="text" class="form-control" id="address" required="">
+                    {{form.ciudad}}
                     <div class="invalid-feedback"> Please select a valid country. </div>
                 </div>
                 <div class="col-md-4 mb-3">
                     <label for="state">Estado</label>
-                    <input type="text" class="form-control" id="address" required="">
+                    {{form.estado}}
                     <div class="invalid-feedback"> Please provide a valid state. </div>
                 </div>
                 <div class="col-md-3 mb-3">
                     <label for="zip">Codigo postal</label>
-                    <input type="text" class="form-control" id="zip" placeholder="" required="">
+                    {{form.cp}}
                     <div class="invalid-feedback"> Zip code required. </div>
                 </div>
             </div>
-           
-           
-            <hr class="mb-4">
-            <h4 class="mb-3">Metodo de pago</h4>
-            <div class="d-block my-3">
-                <div class="custom-control custom-radio">
-                    <input id="credit" name="paymentMethod" type="radio" class="custom-control-input" checked="" required="">
-                    <label class="custom-control-label" for="credit">Targeta de credito</label>
-                </div>
-                <div class="custom-control custom-radio">
-                    <input id="debit" name="paymentMethod" type="radio" class="custom-control-input" required="">
-                    <label class="custom-control-label" for="debit">Targeta de debito</label>
-                </div>
-                <div class="custom-control custom-radio">
-                    <input id="paypal" name="paymentMethod" type="radio" class="custom-control-input" required="">
-                    <label class="custom-control-label" for="paypal">PayPal</label>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-6 mb-3">
-                    <label for="cc-name">Nombre de targeta</label>
-                    <input type="text" class="form-control" id="cc-name" placeholder="" required="">
-                    <small class="text-muted">Full name as displayed on card</small>
-                    <div class="invalid-feedback"> Name on card is required </div>
-                </div>
-                <div class="col-md-6 mb-3">
-                    <label for="cc-number">Numero de targeta</label>
-                    <input type="text" class="form-control" id="cc-number" placeholder="" required="">
-                    <div class="invalid-feedback"> Credit card number is required </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-3 mb-3">
-                    <label for="cc-expiration">Fecha de expiracion</label>
-                    <input type="text" class="form-control" id="cc-expiration" placeholder="" required="">
-                    <div class="invalid-feedback"> Expiration date required </div>
-                </div>
-                <div class="col-md-3 mb-3">
-                    <label for="cc-cvv">Codigo unico</label>
-                    <input type="text" class="form-control" id="cc-cvv" placeholder="" required="">
-                    <div class="invalid-feedback"> Security code required </div>
-                </div>
-            </div>
-            <hr class="mb-4">
             <button class="btn btn-primary btn-lg btn-block" type="submit">Continua con tu compra</button>
         </form>
+           
+           
+            
+            
+       
+         
     </div>
 </div>
 </div>
